--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,79 @@
 @charset "utf-8";
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital@0;1&display=swap');
 
 * {
-    margin: 0;
+    margin: 0px;
+    padding: 0px;
+    list-style: none;
+    text-decoration: none;
+    font-family: "Montserrat", sans-serif;
+    font-size: 16px;
+    color: #000;
+    font-weight: 600;
+}
+
+header {
+    width: 100%;
+    height: 100px;
+    background-color: #fff;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    position: fixed;
+    top: 0;
+    z-index: 1;
+}
+
+#logo {
+    width: 300px;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#logo img {
+    width: 180px;
+}
+
+nav{
+    display: flex;
+    flex: 4;
+    flex-direction: row-reverse;
+}
+
+ul {
+    display: flex;
+    line-height: 100px;
+    margin-right: 20px;
+}
+
+ul > li {
+    margin: 0px 40px;
+}
+
+#slider {
+    width: 100%;
+    height: 100vh;
+    background-color: aqua;
+}
+#slider > img {
+    width: 100%;
+    margin-top: 100px;
+    filter: contrast(120%);
+}
+
+#character {
+    width: 100%;
+    height: 100vh;
+    background-color: yellow;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#character > h1 {
+    font-size: 50px;
+    margin: 80px 0px 30px;
+    font-weight: 600;
 }
